add a test case when pointing multiple indices